--- a/src/styles/reviewhotel.module.css
+++ b/src/styles/reviewhotel.module.css
@@ -1,289 +1,569 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  margin-left: 188px;
+/* desktop */
+@media (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 188px;
+  }
+
+  .headerContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .headerBackSearchContainer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 32px;
+    margin-bottom: 32px;
+  }
+
+  .headerButtonContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 32px;
+  }
+  .reviewBookingContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 956.42px;
+    margin-bottom: 32px;
+  }
+
+  .reviewText {
+    font-weight: 600;
+    font-size: 24px;
+    color: #221f3c;
+    margin-bottom: 8px;
+  }
+  .nameRatingContainer {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .hotelNameText {
+    margin-right: 15.8px;
+    margin-bottom: 4px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #2d3ddf;
+  }
+
+  .hotelLocationText {
+    margin-bottom: 10px;
+    font-size: 20px;
+    opacity: 0.55;
+  }
+
+  .whereButton {
+    width: 279px;
+    height: 62px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+  }
+
+  .checkContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 32px;
+    margin-left: 32px;
+    gap: 80px;
+  }
+
+  .checkText {
+    font-size: 16px;
+    opacity: 0.55;
+  }
+
+  .checkInfoText {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: #221f3c;
+    size: 20px;
+    font-weight: 600;
+  }
+
+  .timeText {
+    font-size: 18px;
+    opacity: 0.55;
+  }
+
+  .nightBox {
+    display: flex;
+    width: 131px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background-color: #b7bcf3;
+    color: #2d3ddf;
+    font-size: 16px;
+  }
+
+  .guestDetailsText {
+    margin-bottom: 9;
+    color: #221f3c;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .guestInputContainer {
+    display: flex;
+    flex-direction: column;
+    width: 867px;
+    height: 116px;
+  }
+
+  .guestInput {
+    /* flex-grow: 1; */
+    width: 100%;
+  }
+
+  .guestInputField {
+    width: 410px;
+    height: 52px;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    padding-left: 24.4px;
+  }
+
+  .addGuestButton {
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    margin-left: 20px;
+  }
+
+  .requestText {
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-bottom: 9px;
+  }
+
+  .dateButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 344px;
+    height: 62px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+  }
+
+  .checkInPart {
+    flex: 1;
+    border-right: 1px solid #b5b5b5;
+    height: 62px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .checkOutPart {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .peopleButton {
+    width: 382px;
+    height: 62px;
+    margin-right: 12px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+  }
+
+  .searchButton {
+    width: 230px;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .contentContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .requestInput {
+    width: 867px;
+    height: 129px;
+    margin-bottom: 32px;
+    border: 1px, solid #b7bcf3;
+    border-radius: 4px;
+  }
+
+  .continueButton {
+    width: 280px;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .rightContainer {
+    width: 482px;
+    margin-right: 141px;
+  }
+
+  .paymentSummary {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 49px;
+    gap: 10px;
+  }
+
+  .paymentSummaryTextContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .totalCostText {
+    font-weight: 700;
+    font-size: 22px;
+    /* color: #2d3ddf; */
+  }
+
+  .paymentPolicy {
+    width: 482px;
+    height: 200px;
+    background: white;
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
+  }
+
+  .paymentPolicyTextContainer {
+    margin-left: 20px;
+  }
+
+  .cancelText {
+    font-size: 16px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-bottom: 10px;
+  }
+
+  .refundText {
+    font-size: 16px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-bottom: 26px;
+  }
+
+  .ruleText {
+    font-size: 16px;
+    opacity: 0.55;
+  }
+
+  .viewPolicyText {
+    margin-bottom: 26px;
+  }
+
+  .viewPolicyButton {
+    border: none;
+    font-size: 16px;
+    opacity: 0.55;
+  }
+
+  .errorBorder {
+    border: 1px solid red;
+  }
 }
 
-.headerContainer {
-  display: flex;
-  flex-direction: column;
-}
+/* mobile */
+@media (max-width: 767px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin-left: 0;
+  }
 
-.headerBackSearchContainer {
-  display: flex;
-  flex-direction: row;
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
+  .headerContainer {
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-.headerButtonContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  margin-bottom: 32px;
-}
-.reviewBookingContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 956.42px;
-  margin-bottom: 32px;
-}
+  .headerBackSearchContainer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-.reviewText {
-  font-weight: 600;
-  font-size: 24px;
-  color: #221f3c;
-  margin-bottom: 8px;
-}
-.nameRatingContainer {
-  display: flex;
-  flex-direction: row;
-}
+  .headerButtonContainer {
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 20px;
+  }
 
-.hotelNameText {
-  margin-right: 15.8px;
-  margin-bottom: 4px;
-  font-size: 22px;
-  font-weight: 600;
-  color: #2d3ddf;
-}
+  .reviewBookingContainer {
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 
-.hotelLocationText {
-  margin-bottom: 10px;
-  font-size: 20px;
-  opacity: 0.55;
-}
+  .reviewText {
+    font-weight: 600;
+    font-size: 24px;
+    color: #221f3c;
+    margin-bottom: 8px;
+  }
 
-.whereButton {
-  width: 279px;
-  height: 62px;
-  background-color: #ffffff;
-  border: 1px solid #b5b5b5;
-  border-radius: 4px;
-  font-size: 18px;
-}
+  .nameRatingContainer {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
+    /* text-align: center; */
+  }
 
-.checkContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  margin-bottom: 32px;
-  margin-left: 32px;
-  gap: 80px;
-}
+  .hotelNameText {
+    margin-right: 15.8px;
+    margin-bottom: 4px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #2d3ddf;
+  }
 
-.checkText {
-  font-size: 16px;
-  opacity: 0.55;
-}
+  .hotelLocationText {
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 20px;
+    opacity: 0.55;
+    font-size: 14px;
+  }
 
-.checkInfoText {
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  color: #221f3c;
-  size: 20px;
-  font-weight: 600;
-}
+  .hotelImgContainer {
+    display: flex;
+    justify-content: center;
+  }
 
-.timeText {
-  font-size: 18px;
-  opacity: 0.55;
-}
+  .whereButton {
+    width: 100%;
+    height: 62px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
 
-.nightBox {
-  display: flex;
-  width: 131px;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 4px;
-  background-color: #b7bcf3;
-  color: #2d3ddf;
-  font-size: 16px;
-}
+  .peopleButton {
+    width: 100%;
+    height: 62px;
+    font-size: 16px;
+    margin-bottom: 24px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+  }
+  .searchButton {
+    width: 100%;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+  }
 
-.guestDetailsText {
-  margin-bottom: 9;
-  color: #221f3c;
-  font-size: 20px;
-  font-weight: 600;
-}
+  .checkContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 32px;
+    margin-left: 32px;
+    gap: 80px;
+  }
 
-.guestInputContainer {
-  display: flex;
-  flex-direction: column;
-  width: 867px;
-  height: 116px;
-}
+  .checkInfoText {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: #221f3c;
+    size: 20px;
+    font-weight: 600;
+  }
 
-.guestInput {
-  /* flex-grow: 1; */
-  width: 100%;
-}
+  .nightBox {
+    display: flex;
+    width: 131px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background-color: #b7bcf3;
+    color: #2d3ddf;
+    font-size: 16px;
+  }
 
-.guestInputField {
-  width: 410px;
-  height: 52px;
-  margin-right: 12px;
-  margin-bottom: 12px;
-  padding-left: 24.4px;
-}
+  .guestDetailsText {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #221f3c;
+    font-weight: 600;
+  }
 
-.addGuestButton {
-  border: none;
-  font-size: 18px;
-  font-weight: 600;
-  color: #221f3c;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  margin-left: 20px;
-}
+  .guestInputContainer {
+    width: 100%;
+    height: auto;
+  }
 
-.requestTest {
-  border: none;
-  font-size: 18px;
-  font-weight: 600;
-  color: #221f3c;
-  margin-bottom: 9px;
-}
+  .guestInputField {
+    width: 100%;
+    height: 40px;
+    margin-right: 0;
+    margin-bottom: 10px;
+    padding-left: 15px;
+    box-sizing: border-box;
+  }
 
-.dateButton {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 344px;
-  height: 62px;
-  background-color: #ffffff;
-  border: 1px solid #b5b5b5;
-  border-radius: 4px;
-  font-size: 18px;
-}
+  .addGuestButton {
+    display: flex;
+    justify-content: flex-start;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-top: 12px;
+    margin-bottom: 32px;
+  }
 
-.checkInPart {
-  flex: 1;
-  border-right: 1px solid #b5b5b5;
-  height: 62px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .requestText {
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #221f3c;
+    margin-bottom: 9px;
+  }
 
-.checkOutPart {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+  .continueButton {
+    width: 100%;
+    height: 62px;
+    background-color: #2d3ddf;
+    font-weight: 500;
+    font-size: 22px;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    margin-bottom: 32px;
+  }
 
-.peopleButton {
-  width: 382px;
-  height: 62px;
-  margin-right: 12px;
-  background-color: #ffffff;
-  border: 1px solid #b5b5b5;
-  border-radius: 4px;
-  font-size: 18px;
-}
+  .contentContainer {
+    flex-direction: column;
+    gap: 30px;
+  }
 
-.searchButton {
-  width: 230px;
-  height: 62px;
-  background-color: #2d3ddf;
-  font-weight: 500;
-  font-size: 22px;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-}
+  .requestInput {
+    width: 100%;
+    height: 100px;
+    border: 1px, solid #b7bcf3;
+    border-radius: 4px;
+    margin-bottom: 32px;
+  }
 
-.contentContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
+  .rightContainer {
+    width: 100%;
+    margin-right: 0;
+  }
 
-.requestInput {
-  width: 867px;
-  height: 129px;
-  margin-bottom: 32px;
-}
+  .paymentSummary {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 49px;
+    gap: 10px;
+  }
 
-.continueButton {
-  width: 280px;
-  height: 62px;
-  background-color: #2d3ddf;
-  font-weight: 500;
-  font-size: 22px;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-}
+  .totalCostText {
+    font-size: 20px;
+  }
 
-.rightContainer {
-  width: 482px;
-  margin-right: 141px;
-}
+  .paymentPolicy {
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    box-sizing: border-box;
+  }
 
-.paymentSummary {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 49px;
-  gap: 10px;
-}
+  .paymentPolicyTextContainer {
+    margin-left: 0;
+  }
 
-.paymentSummaryTextContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.totalCostText {
-  font-weight: 700;
-  font-size: 22px;
-  /* color: #2d3ddf; */
-}
+  .cancelText,
+  .refundText,
+  .ruleText,
+  .viewPolicyText {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
 
-.paymentPolicy {
-  width: 482px;
-  height: 200px;
-  background: white;
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-}
+  .viewPolicyButton {
+    border: none;
+    font-size: 16px;
+    /* opacity: 0.55; */
+  }
 
-.paymentPolicyTextContainer {
-  margin-left: 20px;
-}
+  .dateButton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 62px;
+    background-color: #ffffff;
+    border: 1px solid #b5b5b5;
+    border-radius: 4px;
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+  .checkInPart {
+    flex: 1;
+    border-right: 1px solid #b5b5b5;
+    height: 62px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.cancelText {
-  font-size: 16px;
-  font-weight: 600;
-  color: #221f3c;
-  margin-bottom: 10px;
-}
+  .checkOutPart {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-.refundText {
-  font-size: 16px;
-  font-weight: 600;
-  color: #221f3c;
-  margin-bottom: 26px;
-}
-
-.ruleText {
-  font-size: 16px;
-  opacity: 0.55;
-}
-
-.viewPolicyText {
-  margin-bottom: 26px;
-}
-
-.viewPolicyButton {
-  border: none;
-  font-size: 16px;
-  opacity: 0.55;
-}
-
-.errorBorder {
-  border: 1px solid red;
+  .paymentSummaryTextContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .errorBorder {
+    border: 1px solid red;
+  }
 }
