--- a/src/styles/payment-details.module.css
+++ b/src/styles/payment-details.module.css
@@ -1,109 +1,217 @@
-.paymentDetailsContainer {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
+/* desktop */
+@media (min-width: 768px) {
+  .paymentDetailsContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 
-.paymentDetailsHeader {
-  display: flex;
-  flex-direction: column;
-  justify-content: column;
-  align-items: flex-start;
-  width: 100%;
-}
+  .paymentDetailsHeader {
+    display: flex;
+    flex-direction: column;
+    justify-content: column;
+    align-items: flex-start;
+    width: 100%;
+  }
 
-.backButton {
-  border: none;
-  margin-top: 43px;
-  margin-left: 188px;
-  margin-bottom: 73px;
-}
+  .backButton {
+    border: none;
+    background-color: transparent;
 
-.paymentDetailsContent {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-left: 283px;
-  width: 100%;
-}
+    margin-top: 43px;
+    margin-left: 188px;
+    margin-bottom: 73px;
+  }
 
-.paymentDetailsButtonsContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .paymentDetailsText {
+    margin-left: 247px;
+    margin-bottom: 52px;
+    font-weight: 600;
+    font-size: 24px;
+  }
 
-.paymentDetailsButton {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  align-self: flex-start;
-  border: none;
-  width: fit-content;
-  height: 59px;
-  background-color: white;
-  margin-bottom: 25px;
-}
-.paymentDetailsButtonSelected {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  align-self: flex-start;
-  max-width: 605px;
-  width: 605px;
-  max-height: 109px;
-  height: 109px;
-  margin-top: 31px;
-  margin-bottom: 31px;
-  border: 1px solid #2d3ddf;
-  border-radius: 6px;
-  background-color: white;
-}
+  .paymentDetailsContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 283px;
+    width: 100%;
+  }
 
-.paymentSummary {
-  width: 494.19px;
-  height: 195px;
-  /* margin-left: 900px; */
-  margin-right: 400px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 24px;
-  padding-right: 24px;
-  align-items: flex-end;
-}
+  .paymentDetailsButtonsContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.paymentSummaryTextContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
+  .paymentDetailsButton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: flex-start;
+    border: none;
+    width: fit-content;
+    height: 59px;
+    background-color: white;
+    margin-bottom: 25px;
+  }
+  .paymentDetailsButtonSelected {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-self: flex-start;
+    max-width: 605px;
+    width: 605px;
+    max-height: 109px;
+    height: 109px;
+    margin-top: 31px;
+    margin-bottom: 31px;
+    border: 1px solid #2d3ddf;
+    border-radius: 6px;
+    background-color: white;
+  }
 
-.iconWayWrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.iconWayWrapperSelected {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-left: 27.2px;
-}
+  .paymentSummary {
+    width: 494.19px;
+    height: 195px;
+    /* margin-left: 900px; */
+    margin-right: 400px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    padding-left: 24px;
+    padding-right: 24px;
+    align-items: flex-end;
+  }
 
-.confirmButton {
-  border: none;
-  align-self: center;
-  justify-content: center;
-  margin-right: 27.2;
-}
+  .paymentSummaryTextContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
 
+  .iconWayWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .iconWayWrapperSelected {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 27.2px;
+  }
+
+  .confirmButton {
+    border: none;
+    align-self: center;
+    justify-content: center;
+    margin-right: 27.2;
+  }
+}
 
 /* mobile */
-@media (max-width: 767px) { 
-  
+@media (max-width: 767px) {
+  .paymentDetailsContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+  }
 
+  .paymentDetailsHeader {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+  }
+
+  .backButton {
+    border: none;
+    background-color: transparent;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-right: 73px;
+  }
+
+  .paymentDetailsText {
+    display: flex;
+    font-weight: 600;
+    font-size: 24px;
+  }
+
+  .paymentDetailsContent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .paymentDetailsButtonsContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .paymentDetailsButton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    margin-bottom: 15px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc; /* Added for visibility */
+    border-radius: 6px; /* Added for consistency */
+  }
+
+  .paymentDetailsButtonSelected {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+    border: 1px solid #2d3ddf;
+    border-radius: 6px;
+    background-color: white;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .iconWayWrapper,
+  .iconWayWrapperSelected {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px; /* Adds space between icon and text */
+  }
+
+  .confirmButton {
+    width: 100%;
+    border: none;
+    margin-top: 20px;
+    background-color: #ffff;
+  }
+
+  .paymentSummary {
+    width: 100%;
+    height: auto;
+    margin: 20px 0;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .paymentSummaryTextContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
 }
